# terrortronics-public

./: .gitignore  LICENSE  README.md  coap_client.py  coap_server.py  game.py  keyboard.py  main.py  outputer.py  pygame_background.py  pygame_cloud.py  pygame_tile.py  tcp_client.py  tcp_server.py  timer.py  udp_receiver.py  udp_sender.py  usb.py  utility.py  utility_file_io.py  utility_pygame.py
BATCH/: BUILD.BAT
CPP/: game.cpp  game.h
OpenXR/openxr_samples/samples/: CMakeLists.txt  build.gradle  build.py  gradle.properties  local.properties  settings.gradle
OpenXR/openxr_samples/samples/eye_gaze/: README.md
OpenXR/openxr_samples/samples/eye_gaze/app/: build.gradle
OpenXR/openxr_samples/samples/eye_gaze/app/src/main/: AndroidManifest.xml
OpenXR/openxr_samples/samples/eye_gaze/app/src/main/assets/: XR_APILAYER_LUNARG_core_validation.json  bubble_blue.glb  pop.raw
OpenXR/openxr_samples/samples/eye_gaze/app/src/main/cpp/: CMakeLists.txt  bubble.h  main.cpp
OpenXR/openxr_samples/samples/eye_gaze/app/src/main/res/values/: strings.xml
OpenXR/openxr_samples/samples/eye_gaze/gradle/wrapper/: gradle-wrapper.properties
OpenXR/openxr_samples/samples/hand_tracking/: README.md
OpenXR/openxr_samples/samples/hand_tracking/app/: build.gradle
OpenXR/openxr_samples/samples/hand_tracking/app/src/main/: AndroidManifest.xml
OpenXR/openxr_samples/samples/hand_tracking/app/src/main/assets/: bubble.glb  bubble_green.glb  bubble_red.glb
OpenXR/openxr_samples/samples/hand_tracking/app/src/main/cpp/: bubble.h  main.cpp
OpenXR/openxr_samples/samples/hand_tracking/app/src/main/res/values/: strings.xml
OpenXR/openxr_samples/samples/plane_detection/: README.md
OpenXR/openxr_samples/samples/plane_detection/app/: build.gradle
OpenXR/openxr_samples/samples/plane_detection/app/src/main/: AndroidManifest.xml
OpenXR/openxr_samples/samples/plane_detection/app/src/main/cpp/: CMakeLists.txt  PlaneFilters.h  PlaneNode.h  PlaneProcessor.cpp  PlaneProcessor.h  main.cpp
OpenXR/openxr_samples/samples/plane_detection/app/src/main/res/values/: strings.xml
OpenXR/openxr_samples/samples/simple/: README.md  build.gradle
OpenXR/openxr_samples/samples/simple/app/: build.gradle
OpenXR/openxr_samples/samples/simple/app/src/main/: AndroidManifest.xml
OpenXR/openxr_samples/samples/simple/app/src/main/cpp/: CMakeLists.txt  main.cpp
OpenXR/openxr_samples/samples/simple/gradle/wrapper/: gradle-wrapper.properties
OpenXR/openxr_samples/xraf/: CMakeLists.txt  dependencies  readme.md
OpenXR/openxr_samples/xraf/include/app_framework/: Application.h  AssetManager.h  GuiBackend.h  IGui.h  IGuiBackend.h  IXrMLGraphicsDevice.h  Linear.h  Logging.h  OpenXRCommon.h  RefCount.h  Resources.h  RunHere.h  XrAndroidCore.h  XrAppSimCore.h  XrCore.h  XrHostCore.h  XrMLGraphicsDeviceOpenGLES.h  XrMLGraphicsDeviceVulkan.h  XrMLSceneGraphGraphicsDeviceVulkan.h  XrMLSwapChain.h  XrReflection.h  ml_macros.h
OpenXR/openxr_samples/xraf/include/app_framework/Components/: Component.h  Console.h  Controller.h  GLTF.h  GLTFAnimation.h  Gui.h  ITexture.h  Light.h  Material.h  Mesh.h  NativeSurfaceTexture.h  Sound.h  Text.h  Texture.h  ViewFollower.h
OpenXR/openxr_samples/xraf/include/app_framework/Extensions/: ExtEyeGaze.h  ExtHandInteraction.h  ExtHandTracking.h  ExtPalmPose.h  ExtPlaneDetection.h  KhrConvertTimeSpec.h  MLCompat.h  MLFrameEndInfoExt.h  MLGlobalDimmer.h  MLMarkerTracking.h  MLSystemNotifications.h  MLUserCalibration.h  XrKHRVulkanEnable.h  XrKHRVulkanEnable2.h
OpenXR/openxr_samples/xraf/include/app_framework/Geometry/: Axis.h  Cube.h  Quad.h  Ray.h  Vertex.h
OpenXR/openxr_samples/xraf/include/app_framework/Scene/: HitTest.h  Node.h
OpenXR/openxr_samples/xraf/include/app_framework/Utils/: AndroidHelper.h  IntentHelper.h  PermissionHelper.h  StructNextChain.h  SystemHelper.h  SystemHelperCommon.h  WebRequest.h  XrStrings.h
OpenXR/openxr_samples/xraf/include/app_framework/vulkan/: AndroidHwBufferHelper.h  Buffer.h  CommandBuffers.h  ImageBuffer.h  ImmutableYcbcrSampler.h  MaterialDescriptorSet.h  NativeImageBuffer.h  PushConstants.h  RenderPass.h  RenderTarget.h  ShaderModule.h  SwapChain.h  TextureDescriptorPool.h  UBO.h  VulkanGui.h
OpenXR/openxr_samples/xraf/patches/: imgui_CMakeLists.txt  mikktspace_CMakeLists.txt
OpenXR/openxr_samples/xraf/resources/: CMakeLists.txt  Resources.cpp  bin2h.py
OpenXR/openxr_samples/xraf/resources/compiled/: default.png.h  meteor.png.h  pbr.frag.h  pbr.vert.h  shader.frag.h  shader.vert.h
OpenXR/openxr_samples/xraf/resources/shaders/: pbr.frag  pbr.vert  shader.frag  shader.vert
OpenXR/openxr_samples/xraf/src/: Application.cpp  GuiBackend.cpp  IXrMLGraphicsDevice.cpp  Implementation.cpp  Linear.cpp  XrCore.cpp  XrMLGraphicsDeviceOpenGLES.cpp  XrMLGraphicsDeviceVulkan.cpp  XrMLSceneGraphGraphicsDeviceVulkan.cpp  XrMLSwapChain.cpp  XrReflection.cpp
OpenXR/openxr_samples/xraf/src/Components/: Console.cpp  GLTF.cpp  GLTFAnimation.cpp  Mesh.cpp  NativeSurfaceTexture.cpp  Sound.cpp
OpenXR/openxr_samples/xraf/src/Extensions/: ExtEyeGaze.cpp  ExtHandInteraction.cpp  ExtHandTracking.cpp  ExtPalmPose.cpp  ExtPlaneDetection.cpp  KhrConvertTimeSpec.cpp  MLCompat.cpp  MLFrameEndInfoExt.cpp  MLGlobalDimmer.cpp  MLMarkerTracking.cpp  MLSystemNotifications.cpp  MLUserCalibration.cpp  XrKHRVulkanEnable.cpp  XrKHRVulkanEnable2.cpp
OpenXR/openxr_samples/xraf/src/Scene/: HitTest.cpp  Node.cpp
OpenXR/openxr_samples/xraf/src/Utils/: PermissionHelper.cpp  StructNextChain.cpp
OpenXR/openxr_samples/xraf/src/device/: AndroidAssetManager.cpp  IntentHelper.cpp  SystemHelper.cpp  WebRequest.cpp  XrAndroidCore.cpp
OpenXR/openxr_samples/xraf/src/host/: HostAssetManager.cpp  IntentHelper.cpp  SystemHelper.cpp  WebRequest.cpp  XrAppSimCore.cpp  XrHostCore.cpp
OpenXR/openxr_samples/xraf/src/vulkan/: AndroidHwBufferHelper.cpp  Buffer.cpp  CommandBuffers.cpp  ImageBuffer.cpp  ImmutableYcbcrSampler.cpp  MaterialDescriptorSet.cpp  NativeImageBuffer.cpp  RenderPass.cpp  RenderTarget.cpp  ShaderModule.cpp  SwapChain.cpp  TextureDescriptorPool.cpp  UBO.cpp  VulkanGui.cpp
(+1998 files in other folders)
